--- a/CondoRented_Owner/CondoRented_Owner.xcodeproj/xcshareddata/xcschemes/CondoRented_Owner.xcscheme
+++ b/CondoRented_Owner/CondoRented_Owner.xcodeproj/xcshareddata/xcschemes/CondoRented_Owner.xcscheme
@@ -80,6 +80,11 @@
             value = "YES"
             isEnabled = "YES">
          </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "ENABLE_DEBUG_DYLIB"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
       </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
